<resources>
    <string name="app_name">SinClassify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Login screen-->

    <string name="changeLan">Change Language</string>
    <string name="login">Login</string>
    <string name="registerLink">Do not have account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Register screen-->

    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confrim">Conf. Password</string>
    <string name="loginLint">Allready have an account. Login</string>

    <!--Main screen-->

    <string name="topic">Classify Your Text Data</string>
    <string name="boxText">Paste the text to classify</string>
    <string name="importFromFile">Import From File</string>
    <string name="clear">Clear</string>
    <string name="Classificationproceed">Categorize</string>

    <!--Resource screen-->

    <string name="Retopic">Resource</string>
    <string name="moreNews">More News</string>
    <string name="dictionary">Dictionary</string>
    <string name="translator">Translator</string>
    <string name="sample">Sample</string>

    <!--Result screen-->

    <string name="topicResult">Classification Results</string>
    <string name="Crime">Crime</string>
    <string name="politic">Politics</string>
    <string name="business">Business</string>
    <string name="sport">Sport</string>
    <string name="religion">Religion</string>

    <!--Contact Us screen-->

    <string name="topicContact">Contact Us</string>
    <string name="call">Call Now</string>
    <string name="emailNow">Email Now</string>
</resources>
