<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LighterGray">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginLeft="-65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/logo_main" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/topic"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/LightGray" />

                <EditText
                    android:id="@+id/txtInput"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@color/White"
                    android:gravity="top"
                    android:hint="@string/boxText"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:lines="8"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnImport"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/importFromFile"
                        android:textColor="@color/White"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnClear"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/clear"
                        android:textColor="@color/White"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                </LinearLayout>




                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnclassify"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Classificationproceed"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navheader_layout"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/colorPrimaryDark"
            app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>